--- a/app/src/main/res/layout/activity_bender_battle.xml
+++ b/app/src/main/res/layout/activity_bender_battle.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp" />
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/center_y">
@@ -140,7 +140,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.996" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.ConstraintLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -158,7 +158,7 @@
 
     </RelativeLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/center_y"
@@ -211,7 +211,7 @@
             app:layout_constraintVertical_bias="0.906"
             app:srcCompat="@drawable/fleebutton" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.ConstraintLayout>
 
 
 </RelativeLayout>
